# infinity

./: .gitignore  README.md
backend/: README.md  authentication_flow.md  database_schema.md  main.db  pyproject.toml
backend copy/: main.db  reporting_feature_plan.md
backend copy/app/: main.py  models.py
backend/app/: auth.py  crud.py  database.py  schemas.py
backend/app/ai_core/: requirements.txt  therapist_recommender.py
docs/: frontend_README.md  game_module_plan.md  ui_principles.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/games/manipulatives/: page.tsx
frontend/src/app/games/subitisation/: page.tsx
frontend/src/app/student/: page.tsx
frontend/src/app/therapist/: page.tsx
frontend/src/components/: ClayButton.tsx
frontend/src/components/games/GameEngine/: DotDisplay.tsx  GamePlay.tsx  GameResults.tsx  GameSetup.tsx  NumberButtons.tsx  Timer.tsx
frontend/src/components/games/manipulatives/: ManipulativesGame.tsx
frontend/src/components/games/manipulatives/components/: ChipDisplay.tsx  ManipulativesGameBoard.tsx
frontend/src/components/games/subitisation/: SubitisationGame.tsx
frontend/src/components/home/: Companions.tsx  Graphics.tsx  Hero.tsx  LoginModal.tsx  Tracks.tsx  UserCard.tsx
frontend/src/components/therapist/: FormBlock.tsx  GameCard.tsx
frontend/src/hooks/: useGameEngine.tsx
frontend/src/lib/: api.ts
frontend/src/types/: game.ts  therapist.ts
frontend/src/utils/: audio.ts  date.ts  dotPatterns.ts
